fix(chat): Optimize UX & fix stograge bug
